Update to nav and functions
Made the nav bar creator a separate function; added submenus to the nav
bar;  updated the templates slightly for navigation, context now
includes full <a href> declaration.

--- a/templates/practice_page.html
+++ b/templates/practice_page.html
@@ -14,14 +14,22 @@
 	
 	<script id="navigation-bar" type="text/x-handlebars-template">
 	  <nav>
-	    <ul>
-		  {{#list nav}}
-            <a href="{{url}}">{{title}}</a>
+	    <ul> 
+	      {{#list nav}}
+            <li>{{{anchor}}}{{title}}</a></li>
           {{/list}}
 		</ul>
 	  </nav>
 	</script>
 	
+	<script id="navigation-subbar" type="text/x-handlebars-template">
+	  <ul>
+	    {{#list nav}}
+          <li>{{{anchor}}}{{title}}</a></li>
+        {{/list}}
+	  <ul>
+	
+	</script>
 	<script id="entry-template" type="text/x-handlebars-template">
     <div class="entry">
       <h1>{{title}}</h1>
