--- a/templates/practice_page.html
+++ b/templates/practice_page.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Practice page</title>
+	<link rel="stylesheet" type="text/css" href="../public/css/default.css" media="screen" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="../public/js/handlebars-v3.0.3.js"></script>
 	<script src="../public/js/app.js"></script>
