Removed skeleton stuff
We'll use bootstrap.

--- a/templates/practice_page.html
+++ b/templates/practice_page.html
@@ -15,7 +15,7 @@
 	</div>
 	
 	<!--- Navigation bar --->
-	<div id="navigation" class="clearfix"></div>
+	<div id="navigation"></div>
 	
 	<!--- Space for text content --->
     <div id="content">
