--- a/public/css/default.css
+++ b/public/css/default.css
@@ -1,5 +1,5 @@
 @import url(reset.css);
-@import url(skeleton.css)
+@import url(skeleton.css);
 
 nav {
   width: 100%;
@@ -25,7 +25,11 @@ nav ul {
   display: inline-table;
 }
 
-nav ul: after {}
+nav ul: after {
+  content: ""; 
+  clear: both; 
+  display: block;
+}
 
 nav ul li{
   float: left;
