--- a/templates/practice_page.html
+++ b/templates/practice_page.html
@@ -8,22 +8,16 @@
 	<script src="../public/js/app.js"></script>
   </head>
   <body>
+    <!--- Head bar for future logo --->
+	<div id="header">Kettering Anime Club</div>
   <div class="container">
     <div class="row">
-      <!--- Head bar for future logo --->
-	  <div id="header" class="twelve columns">Kettering Anime Club</div>
-    </div>
-    <div class="row">
 	  <!--- Navigation bar --->
-	  <div class="two columns"></div>
-	  <div id="navigation" class="eight columns"></div>
-      <div class="two columns"></div>    
+	  <div id="navigation" class="twelve columns"></div>   
     </div>
 	<div class="row">
-	  <div class="one-third"></div>
 	  <!--- Space for text content --->
-      <div id="content" class="one-third">I am getting output.</div>
-	  <div class="one-third"></div>
+      <div id="content" class="twelve columns">I am getting output.</div>
     </div>
   </div>
   </div>  
