--- a/templates/practice_page.html
+++ b/templates/practice_page.html
@@ -39,7 +39,7 @@
       </ul>
     </script>
 
-    <script id="entry-template" type="text/x-handlebars-template">
+    <script id="home-page" type="text/x-handlebars-template">
       <div class="entry">
         <h1>{{title}}</h1>
         <div class="body">
