--- a/templates/practice_page.html
+++ b/templates/practice_page.html
@@ -47,6 +47,60 @@
         </div>
       </div>
     </script>
+	
+	<script id="about-page" type="text/x-handlebars-template">
+	  <div class="entry">
+        <h1>{{title}}</h1>
+        <div class="body">
+          {{body}}
+        </div>
+      </div>
+	</script>
+	
+	<script id="rules-page" type="text/x-handlebars-template">
+	  <div class="entry">
+        <h1>{{title}}</h1>
+        <div class="body">
+          {{body}}
+        </div>
+      </div>
+	</script>
+	
+	<script id="showings-page" type="text/x-handlebars-template">
+	  <div class="entry">
+        <h1>{{title}}</h1>
+        <div class="body">
+          {{body}}
+        </div>
+      </div>
+	</script>
+	
+	<script id="recommend-page" type="text/x-handlebars-template">
+	  <div class="entry">
+        <h1>{{title}}</h1>
+        <div class="body">
+          {{body}}
+        </div>
+      </div>
+	</script>
+	
+	<script id="collection-page" type="text/x-handlebars-template">
+	  <div class="entry">
+        <h1>{{title}}</h1>
+        <div class="body">
+          {{body}}
+        </div>
+      </div>
+	</script>
+	
+	<script id="event-page" type="text/x-handlebars-template">
+	  <div class="entry">
+        <h1>{{title}}</h1>
+        <div class="body">
+          {{body}}
+        </div>
+      </div>
+	</script>
 
   </body>
 </html>
