--- a/templates/practice_page.html
+++ b/templates/practice_page.html
@@ -109,6 +109,15 @@
         </div>
       </div>
 	</script>
+	
+	<!-- hypothetical -->
+	
+	<script id="example-page" type="text/x-handlebars-template">
+	  {{#each dogs}}
+	    <p>{{name}},</p>
+		<input type="text">
+	  {{/each}}
+	</script>
 
   </body>
 </html>
